--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -59,6 +59,9 @@ h2{
     .productList h2{
         font-size: 18px;
     }
+    .productList p{
+        font-size: 68%;
+    }
     .productList img{
         font-size: small;
     }
@@ -90,8 +93,8 @@ h2{
         margin-left:20px;
         width: 100%;
     }
-    .productList h2{
-        
+    .productList p{
+        font-size: 98%;
     }
     .productList img{
         
