--- a/src/components/productList/productList.css
+++ b/src/components/productList/productList.css
@@ -8,21 +8,19 @@
     width:100%;
 }
 
-.productList {
-    display: inline-block;
-    min-width: 70%;
-}
-
 .productList h2 {
     text-align: center;
 }
-
+.productList {
+    display: inline-block;
+    min-width: 75%;
+}
 .sideBar {
     display: block;
-    min-width: 15%;
+    width: 20%;
     margin-top: 70px;
-    padding-left: 70px;
-    margin-right:120px;
+    padding-left: 4%;
+    margin-right:1%;
 }
 h2{
     color:rgb(29, 58, 81);
@@ -47,80 +45,154 @@ h2{
 .sideBar button:hover{
     border-left:1.3px rgb(29, 58, 81) solid;
 }
+
 .productContainer{
+    min-width: 98%;
     display: flex;
+    flex-wrap: wrap;
+}
+.productContainer .product{
+    min-width:220px;
+    height:330px;
+    padding:10px;
+}
+.productList .product img{
+    height:70%;
+    width:70%;
+    margin:30px;
 }
 @media (max-width:1250px){
+    .productList{
+        min-width:60%;
+    }
+    .productContainer{
+        width: 100%;
+    }
     .productList .product{
-        height:31%;
-        width:27%;
+        height:37%;
+        width:37%;
         margin:30px;
     }
     .productList h2{
-        font-size: 18px;
+        font-size: 25px;
     }
     .productList p{
-        font-size: 68%;
+        font-size: 108%;
     }
-    .productList img{
-        font-size: small;
-    }
-    .collections .sideBar{
-        padding-left: 50px;
-        margin-right: 80px;
+    .sideBar{
+        min-width:22%;
+        padding-left: 4%;
+        margin-right: 3%;
     }
 }
 @media (max-width:1000px){
+    .productList{
+        width: 70%;
+    }
+    .sideBar{
+        min-width:20%;
+        padding-left: 4%;
+        margin-right: 1%;
+    }
     .productList .product{
-        width:25%;
-        margin:20px;
+        height:29%;
+        width:43%;
+        margin:10px;
+    }
+    /* .productList .product img{
+        height:100%;
+        width:100%;
+        margin:30px;
+    } */
+    .productList h2{
+        font-size: 22px;
+    }
+    .productList p{
+        font-size: 105%;
+    }
+    
+}
+@media (max-width:820px){
+    .productList .product{
+        height:37%;
+        width:20%;
+        margin:0px;
     }
     .productList h2{
-        font-size: 18px;
-    }
-    .productList img{
-        font-size: small;
-        height:26%;
-    }
-    .collections .sideBar{
-        padding-left: 20px;
-        margin-right: 40px;
-        min-width: 10%;
-    }
-}
-@media (max-width:800px){
-    .productList .product{
-        margin-left:20px;
-        width: 100%;
+        font-size: 20px;
     }
     .productList p{
         font-size: 98%;
     }
-    .productList img{
-        
-    }
-    .collections .sideBar{
-       display: none;
+    .sideBar{
+        min-width:15%;
+        padding-left: 4%;
+        margin-right: 0%;
+        font-size: small;
     }
 }
-@media (max-width:500px){
-    .productContainer{
-        width: 100%;
-        flex-direction: column;
+@media (max-width:720px){
+    .productList{
+        width:100%;
     }
     .productList .product{
-        
+        height:37%;
+        width:40%;
+        margin:3%;
     }
     .productList h2{
-        font-size: 28px;
+        font-size: 25px;
     }
-    .productList img{
-        
+    .productList p{
+        font-size: 102%;
     }
-    .collections .sideBar{
-       display: none;
+    .sideBar{
+        display: none;
     }
 }
-
+@media (max-width:562px){
+    .productList .product{
+        height:37%;
+        width:31%;
+        margin:1%;
+    }
+    .productList h2{
+        font-size: 20px;
+    }
+    .productList p{
+        font-size: 98%;
+    }
+    .sideBar{
+        display: none;
+    }
+}
+@media (max-width:490px){
+    .productList .product{
+        height:50%;
+        width:100%;
+        margin:0%;
+    }
+    .productList .product img{
+        width: 90%;
+    }
+    .productList h2{
+        font-size: 26px;
+    }
+    .productList p{
+        font-size: 119%;
+    }
+    .sideBar{
+        display: none;
+    }
+}
+@media (max-width:490px){
+    .productList h2{
+        font-size: 22px;
+    }
+    .productList p{
+        font-size: 99%;
+    }
+   
+}
 
 /* backgroundColor: isHovered ? 'lightblue' : 'lightgray' */
